--- a/angular-microsites/angular.json
+++ b/angular-microsites/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "../public",
+            "outputPath": "../docs",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
