alteracao do basehref

--- a/angular-microsites/angular.json
+++ b/angular-microsites/angular.json
@@ -33,6 +33,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "/ams/",
               "budgets": [
                 {
                   "type": "initial",
