--- a/angular-microsites/angular.json
+++ b/angular-microsites/angular.json
@@ -13,6 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "qrcode"
+            ],
             "outputPath": "../docs",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -33,7 +36,7 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "/ams/",
+              "baseHref": "/",
               "budgets": [
                 {
                   "type": "initial",
