--- a/angular-microsites/package.json
+++ b/angular-microsites/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.1.0",
     "@tailwindcss/postcss": "^4.0.0",
     "lucide-angular": "^0.474.0",
+    "ng-qrcode": "^19.0.1",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.0",
